# groqapi-py-sdk

./: .gitignore  .gitlab-ci.yml  BUILD.md  README-old.md  README.md  examples.py  examples_async.py  pyproject.toml  setup.py
buf/validate/: expression_pb2.py  validate_pb2.py
buf/validate/priv/: private_pb2.py
examples/: examples.py  examples_async.py
google/api/: annotations_pb2.py  http_pb2.py
google/protobuf/: descriptor_pb2.py
groq/: llmcloud.py
groq/cloud/core/: auth.py  core.py  exceptions.py  types.py
groq/cloud/openai/: __init__.py
public/llmcloud/globalstatsmanager/v1/: globalstatsmanager_pb2.py  globalstatsmanager_pb2_grpc.py
public/llmcloud/modelmanager/v1/: model_pb2.py  modelmanager_pb2.py  modelmanager_pb2_grpc.py
public/llmcloud/queuestatemanager/v1/: queuestatemanager_pb2.py  queuestatemanager_pb2_grpc.py
public/llmcloud/requestmanager/v1/: requestmanager_pb2.py  requestmanager_pb2_grpc.py
tests/core/auth/: test_auth.py
tests/core/e2e/: test_chat_completion.py  test_chat_completion_async.py  test_completion.py  test_completion_async.py  test_models.py
tests/openai/e2e/: test_completion.py  test_module_client.py
