[tool.poetry]
name = "groq"
version = "0.1.0"
description = "The GroqAPI Python SDK"
authors = ["Rohit Khaire <rkhaire@groq.com>", "Matanya Loewenthal <mloewenthal@groq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.60.0"
protobuf = "3.20.3"
google-api-python-client = "^2.111.0"
google-cloud = "^0.34.0"
types-protobuf = "^4.24.0.4"
types-requests = "^2.31.0.20231231"
grpc-stubs = "^1.53.0.5"
openai = "^1.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.1"
coverage = "^7.4.0"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"
prospector = {extras = ["with-bandit"], version = "^1.10.3"}

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]
[tool.coverage.report]
fail_under = 20

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
exclude = [
    '^buf/$',  # TOML literal string (single-quotes, no escaping necessary)
    '^google/$',
    '^public/$',
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
